ui/fail/value/from_lifetime.stderr
error[E0597]: `lives_shorter` does not live long enough
  --> $DIR/from_lifetime.rs:11:29
   |
11 |         let life = Lifetime(&lives_shorter);
   |                             ^^^^^^^^^^^^^^ borrowed value does not live long enough
12 |         val = Value::from(life);
13 |     }
   |     - `lives_shorter` dropped here while still borrowed
14 |
15 |     let _borrow = val.borrow::<i32>();
   |                   ------------------- borrow later used here
